[gd_scene load_steps=2 format=2]

[ext_resource path="res://UI/MainMenu.gd" type="Script" id=1]

[node name="MainMenu" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 60.0
margin_top = 40.0
margin_right = -60.0
margin_bottom = -40.0
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 1800.0
margin_bottom = 1000.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 63.0
margin_bottom = 1000.0
custom_constants/separation = 20
alignment = 2

[node name="StartButton" type="Button" parent="HBoxContainer/VBoxContainer"]
margin_top = 900.0
margin_right = 63.0
margin_bottom = 920.0
text = "Start"

[node name="OptionsButton" type="Button" parent="HBoxContainer/VBoxContainer"]
margin_top = 940.0
margin_right = 63.0
margin_bottom = 960.0
text = "Options"

[node name="QuitButton" type="Button" parent="HBoxContainer/VBoxContainer"]
margin_top = 980.0
margin_right = 63.0
margin_bottom = 1000.0
text = "Quit"

[connection signal="button_up" from="HBoxContainer/VBoxContainer/OptionsButton" to="." method="_on_OptionsButton_button_up"]
[connection signal="button_up" from="HBoxContainer/VBoxContainer/QuitButton" to="." method="_on_QuitButton_button_up"]
